2017-03-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_y.m: Output F had wrong size for ~do_sensor.

	* Mscripts_database/l1b_homemade.m: Orientation of GPSpos field
	was wrong.

2017-02-22  Andreas Skyman   <andreas.skyman@molflow.com>

	* Build_scripts/runscript.m: Will retry maximum 5 times if webread
	or webwrite fails.

2017-01-30  Jimmy Petersson   <jimmy@molflow.com>

	* snapshot/*: Remove outdated snapshot build script and move
	add_jobs application to its own repo.

2017-01-16  Jimmy Petersson   <jimmy@molflow.com>

	* Mscripts_atmlab/mat2col.m: Add missing function

2017-01-12  Jimmy Petersson   <jimmy@molflow.com>

	* Build_scripts/runscript.m: Add timeout to post request.
	* snapshot/add_jobs.py: Adapt to odin api v5.

2016-12-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_qsystem/q2_version.m: Now set to qsmr-beta-8.

	* Mscripts_database/q2_calc_1dviewgeom.m:
	* Mscripts_arts/q2_inv.m:
	* Mscripts_database/l1b_filter.m:
	* Mscripts_database/l1b_fcrop.m:
	* Mscripts_database/l1b_frequency.m:
	* Mscripts_database/l1b_crop.m: Adopted to non-transposed data.

	* Mscripts_webapi/get_scan_l1b_data.m: Removed transposing of
	data.

	* Mscripts_webapi/get_logdata4freqmode.m: Replaced call of
	get_date_info.m with call of webread.

	* Mscripts_webapi/get_scan_log.m:
	* Mscripts_webapi/get_date_info.m: Removed, as functions just
	called webread.

	* Mscripts_database/l1b_fcrop.m: Removed incorrect text in header.

	* Mscripts_database/l2_frequency.m: Moved to atmlab as this
	function is not used in the processing.

2016-11-30  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_webapi: Revised content of this folder. Removed two
	"demo scripts" and all comments in functions to these scripts.
	Also removed run_qsmr.m. I assume the function is not used.

2016-11-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (q2_inv): try-catch was left commented
	out. My mistake.
